# bastion-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/bastion-agent-runtime/: Cargo.toml
crates/bastion-agent-runtime/src/: acpx.rs  codex.rs  conformance.rs  lib.rs  util.rs
crates/bastion-agent-runtime/tests/: acpx_live_claude.rs  acpx_live_opencode.rs  codex_live.rs
crates/bastion-cognition/: Cargo.toml
crates/bastion-cognition/src/: goal.rs  lib.rs  proactive.rs
crates/bastion-cognition/src/agent/: dream.rs  identity.rs  memory_rag.rs  mod.rs  procedural.rs  procedural_outcome.rs
crates/bastion-cognition/src/cabinet/: mod.rs  orchestrator.rs  policy.rs  synth.rs
crates/bastion-cognition/src/eval/: capture.rs  failure_sink.rs  mod.rs  verifier.rs
crates/bastion-cognition/src/learn/: dedup.rs  delta.rs  mod.rs
crates/bastion-extension-protocol/: Cargo.toml
crates/bastion-extension-protocol/src/: error.rs  lib.rs  lockfile.rs  manifest.rs  permission.rs  trust.rs
crates/bastion-extension-wasm/: Cargo.toml
crates/bastion-extension-wasm/src/: lib.rs
crates/bastion-mcp/: Cargo.toml
crates/bastion-mcp/src/: adapters.rs  client.rs  lib.rs  oauth.rs  registry.rs  registry_setup.rs  tool_source.rs
crates/bastion-memory/: Cargo.toml
crates/bastion-memory/src/: lib.rs  sqlite.rs
crates/bastion-mesh/: Cargo.toml
crates/bastion-mesh/src/: lib.rs
crates/bastion-mesh/src/identity/: age_identity.rs  mod.rs
crates/bastion-mesh/src/interop/: export.rs  import.rs  mod.rs
crates/bastion-mesh/src/mesh/: allowlist.rs  context_provider.rs  mod.rs  p2p.rs
crates/bastion-mesh/src/scheduler/: cron.rs
crates/bastion-personas/: Cargo.toml
crates/bastion-personas/src/: lib.rs
crates/bastion-personas/src/persona/: mod.rs  responder.rs  router.rs  runner.rs  soul.rs
crates/bastion-providers/: Cargo.toml
crates/bastion-providers/src/: anthropic.rs  gemini.rs  groq.rs  lib.rs  ollama.rs  openai.rs  openrouter.rs  registry.rs  terminal_agent.rs
crates/bastion-runtime/: Cargo.toml
crates/bastion-runtime/src/: lib.rs  memory.rs  provider.rs
crates/bastion-runtime/src/agent/: backend.rs  compactor.rs  context.rs  handle.rs  loop_.rs  mod.rs  ports.rs
crates/bastion-runtime/src/capability/: approval.rs  auth_resolver.rs  mod.rs  permission_queue.rs  registry.rs  structured_output.rs
crates/bastion-runtime/src/hooks/: approval_intent.rs  egress.rs  guardrails.rs  mod.rs  observer.rs  output_validator.rs
crates/bastion-runtime/src/session/: mod.rs  sqlite.rs
crates/bastion-runtime/src/task/: contract.rs  cycle.rs  event.rs  mod.rs  orchestration.rs  ports.rs  sqlite.rs  store.rs  verify.rs
crates/bastion-types/: Cargo.toml
crates/bastion-types/src/: context_artifact.rs  deployment.rs  lib.rs  secret.rs
docs/: ARCHITECTURE.md  DEVELOPMENT.md  GETTING-STARTED.md  MEMORY.md  SECURITY-INVARIANTS.md  SUPPORT-MATRIX.md  TESTING.md  VERSIONING.md  capability-registry-spec.md  channels-setup.md  clawhub-migration.md  terminal-agent-providers.md
docs/api-baseline/: bastion-agent-runtime.txt  bastion-cognition.txt  bastion-extension-protocol.txt  bastion-extension-wasm.txt  bastion-mcp.txt  bastion-memory.txt  bastion-mesh.txt  bastion-personas.txt  bastion-providers.txt  bastion-runtime.txt  bastion-types.txt  bastion.txt
docs/archive/v2/: README.en.md  README.pt-br.md
docs/en/: README.md  connecting-the-app.md  crisis-mode.md  faq.md  getting-started.md  how-to-install.md  mobile-app.md  personas.md  security.md  vps-setup.md
docs/pt-br/: README.md  app-mobile.md  como-instalar.md  conectando-o-app.md  configurando-a-vps.md  faq.md  iniciando.md  modo-crise.md  personas.md  segurança.md
docs/revamp/: A-01-agentruntime-contract.md  A-05-conformance-matrix.md  A-06-A-07-live.md  A-08-security-e2e.md  BASELINE.md  C2-approval-port-design.md  C2-backend-profile-design.md  C3-cloud-ready-design.md  C3-extension-protocol-design.md  C3-m5-second-consumer-design.md  C3-runtime-followups-design.md  LEGACY-INVENTORY.md  LOOP-REPORT.md  M1-07-characterization-map.md  M1-ADR-substrate-split.md  M2-CLOSE.md  M2-ports-design.md  M3-CLOSE.md  M6-PREP.md
examples/embedded-host/: Cargo.toml
examples/embedded-host-slice/: Cargo.toml
examples/embedded-host-slice/src/: capability.rs  context_blocks.rs  main.rs  otel_capture.rs  plumbing.rs  rule_bundle.rs
examples/embedded-host/src/: main.rs
examples/minimal-agent/: Cargo.toml
examples/minimal-agent/src/: main.rs
scripts/: check-crate-deps.sh  check-scope-and-scrub.sh  dump-public-api.sh  migrate.sh  run-local.sh  validate_image_size.sh
