[package]
name    = "bastion-agent-runtime"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"

[dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "2"
anyhow      = "1"
async-trait = "0.1"
sha2        = "0.10"
semver      = "1"
tracing     = "0.1"
tokio       = { version = "1", features = ["time", "fs", "sync", "macros", "rt", "process", "io-util"] }

[dev-dependencies]
tokio     = { version = "1", features = ["time", "fs", "sync", "macros", "rt", "rt-multi-thread", "process", "io-util", "test-util"] }
tempfile  = "3"
