[package]
name    = "bastion-mesh"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"

# Versions identical to the workspace root — the crate carries only what the
# moved files actually use (audited import-by-import in M2 step 6).
[dependencies]
bastion-types     = { path = "../bastion-types" }
bastion-runtime   = { path = "../bastion-runtime" }
bastion-memory    = { path = "../bastion-memory" }
# interop::{export,import} construct/read GoalEngine and Persona/PersonaRegistry
# directly (the .af agent-file format spans cognition + personas data).
bastion-cognition = { path = "../bastion-cognition" }
bastion-personas  = { path = "../bastion-personas" }
anyhow            = "1"
async-trait       = "0.1"
age               = "0.11"
base64            = "0.22"
chrono            = { version = "0.4", default-features = false, features = ["clock"] }
ed25519-dalek     = { version = "2", features = ["rand_core"] }
opentelemetry     = { version = "0.32", features = ["trace"] }
reqwest           = { version = "0.13", features = ["json", "stream"] }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
sha2              = "0.10"
tokio             = { version = "1", features = ["full"] }
tracing           = "0.1"

[dev-dependencies]
tempfile = "3"
