[package]
name    = "bastion-providers"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"

# Versions identical to the workspace root — the crate carries only what the
# moved files actually use (audited import-by-import in M2 step 5).
[dependencies]
bastion-types   = { path = "../bastion-types" }
bastion-runtime = { path = "../bastion-runtime" }
tokio           = { version = "1", features = ["full"] }
async-openai    = { version = "0.38", features = ["chat-completion"] }
reqwest         = { version = "0.13", features = ["json", "stream"] }
async-trait     = "0.1"
futures-util    = "0.3"
anyhow          = "1"
serde_json      = "1"
tracing         = "0.1"

[dev-dependencies]
# Test-only (ollama.rs's GBNF-diagnostic test builds a schemars schema for
# `bastion_types::CabinetVerdict`).
schemars = "0.8"
