[package]
name    = "embedded-host-slice"
version = "0.1.0"
edition = "2021"
publish = false

# M5 (docs/revamp/BACKLOG.md, docs/revamp/C3-m5-second-consumer-design.md):
# the SECOND embedded-host consumer — proves the M2 substrate boundary was
# not shaped only around the Bastion Agent product. Built ONLY from
# substrate/extension crates (bastion-types, bastion-runtime, bastion-memory,
# bastion-personas) — NEVER the product package `bastion`, and NEVER a fork
# or patch of any bastion-* crate. A generic, neutral "embedded host"
# (operator-owned authoritative context + versioned rule propagation), not
# any named closed-source consumer — see the module docs in `src/` for the
# full write-up and `docs/revamp/LOOP-REPORT.md` for the API gaps this slice
# found along the way.
#
# Expands on `examples/embedded-host` (the narrower M3 seam demo, kept as
#-is) rather than replacing it: this crate exercises all 7 M5 components
# plus the M5.1 RuleBundle propagation test, which needed its own
# demonstration harness (a controllable fake clock, an in-process OTel span
# capture) too specific to fold into the smaller M3 example.
[dependencies]
bastion-types    = { path = "../../crates/bastion-types" }
bastion-runtime  = { path = "../../crates/bastion-runtime" }
bastion-memory   = { path = "../../crates/bastion-memory" }
bastion-personas = { path = "../../crates/bastion-personas" }
tokio                 = { version = "1", features = ["rt-multi-thread", "macros"] }
async-trait           = "0.1"
anyhow                = "1"
serde_json            = "1"
tempfile               = "3"
tracing               = "0.1"
tracing-subscriber    = "0.3"
opentelemetry         = { version = "0.32", features = ["trace"] }
opentelemetry_sdk     = "0.32"

[lints.rust]
unsafe_code = "forbid"
