[package]
name    = "minimal-agent"
version = "0.1.0"
edition = "2021"
publish = false

# Proves a complete turn is buildable with only substrate crates — no
# dependency on the product package `bastion` (see docs/ARCHITECTURE.md).
# `Provider`/`Responder`/
# `ToolSource`/`FailureSink`/`ProviderResolver` are all implemented inline
# below with the minimum needed to complete one turn — no personas, no
# MCP, no real network I/O. `cargo run -p minimal-agent` must succeed
# fully offline.
[dependencies]
bastion-types   = { path = "../../crates/bastion-types" }
bastion-runtime = { path = "../../crates/bastion-runtime" }
bastion-memory  = { path = "../../crates/bastion-memory" }
tokio           = { version = "1", features = ["rt-multi-thread", "macros"] }
async-trait     = "0.1"
anyhow          = "1"
serde_json      = "1"
tempfile        = "3"

[lints.rust]
unsafe_code = "forbid"
